fix x-axis overflow app -> section ->  (display: contents)

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -59,6 +59,7 @@ p {
 section {
   height: 100vh;
   width: 100vw;
+  display: contents;
 }
 
 /* Add Animations Here */
