--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,6 +1,6 @@
 .card_container {
-  padding: 10em;
-  border-radius: 30em;
+  padding: 10rem;
+  border-radius: 30rem;
   box-shadow: var(--ui-shadow);
   width: 300px;
   height: 500px;
@@ -36,6 +36,7 @@
   width: 128px;
   height: 214px;
   fill: white;
+  max-width: 100%;
 }
 
 .card_container .info {
@@ -113,7 +114,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 30em;
+  border-radius: 30rem;
   background: rgba(0, 0, 0, 0.6);
   z-index: 2;
   transition: 0.5s;
