--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -13,8 +13,10 @@
 }
 
 .header-links-toggle {
+  display: flex;
   flex: 1;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .header-links-toggle img {
