--- a/src/containers/projects/projects.css
+++ b/src/containers/projects/projects.css
@@ -1,15 +1,20 @@
+.projects_wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 25rem;
+  max-width: 100%;
+}
+
 .projects-title {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 30rem;
 }
 
 .projects-card_container {
   display: grid;
   /* height: 50vh; */
   gap: 20rem;
-  padding: 0em 30em;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 70rem;
   margin-bottom: 100rem;
